# micrography

./: .gitignore  README.md  apple_env.yml  autoencoder.py  cpu_env.yml  cuda_env.yml  gnn.py  paper.qmd  pipeline.py  plotting.py  project.py  pyproject.toml  requirements.txt  utils.py
notes/: overview.md
